--- a/index.ipynb
+++ b/index.ipynb
@@ -1465,7 +1465,8 @@
    ],
    "source": [
     "def y_intercept(x_values, y_values, m = None):\n",
-    "    if m==\n",
+    "    if m== None:\n",
+    "        \n",
     "    "
    ]
   },
