--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1469,7 +1469,7 @@
     "        m1= slope(x_values, y_values)\n",
     "        return y_values[0]-(x_values[0]*m1)\n",
     "    else:\n",
-    "        return y_values[0]-(x_values[0]*m)\n",
+    "        return y_values[0]-(x_values[0]*m1)\n",
     "    "
    ]
   },
