--- a/index.ipynb
+++ b/index.ipynb
@@ -1458,7 +1458,8 @@
     "def y_intercept(x_values, y_values, m = None):\n",
     "    if m== None:\n",
     "        m1= slope(x_values, y_values)\n",
-    "        x=sorte\n",
+    "        x=sorted(x_values)\n",
+    "        y\n",
     "        return y_values[-1]-(x_values[-1]*m1)\n",
     "    else:\n",
     "        return y_values[-1]-(x_values[0-1]*m)\n",
