--- a/index.ipynb
+++ b/index.ipynb
@@ -1460,7 +1460,7 @@
     "        m1= slope(x_values, y_values)\n",
     "        x=sorted(x_values)\n",
     "        y=sorted(y_values)\n",
-    "        return y_v[-1]-(x_values[-1]*m1)\n",
+    "        return y[-1]-(x[-1]*m1)\n",
     "    else:\n",
     "        return y_values[-1]-(x_values[0-1]*m)\n",
     "    "
