--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1462,7 +1462,7 @@
     "        m1= slope(x_values, y_values)\n",
     "        return y[-1]-(x[-1]*m1)\n",
     "    else:\n",
-    "        return y[-1]-(x_[0-1]*m)\n",
+    "        return y_values[-1]-(x_values[0-1]*m)\n",
     "    "
    ]
   },
